fix white space in the right side in mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,10 @@
 
 
 /*main tags rules*/
+html, body {
+    width: 100%;
+    overflow-x:hidden;
+}
 
 h1, h2, h3, p {
     padding: 0;
